--- a/index.html
+++ b/index.html
@@ -61,21 +61,20 @@
             </div>
             <div class="top__slider-item">
                 <div class="container">
-                    <h2 class="top__slider-title">We Do Big Things With Big Ideas
+                    <h2 class="top__slider-title">Delivering Our Work Safely
                     </h2>
-                    <p class="top__slider-text">Talk To Our Experts and Get Your Dream Home Done. If you dream of
-                        designing a new home that takes full advantage of the unique geography and
-                        views of land that you love</p>
+                    <p class="top__slider-text">Buildx has a culture that promotes an injury-free environment and
+                        provides the safest workplace possible for our employees, subcontractors, clients and others who
+                        enter our construction sites.</p>
                     <a href="#" class="top__btn-link">Explore Now</a>
                 </div>
                 <img src="img/slider-img-2.jpg" alt="" class="top__slider-image">
             </div>
             <div class="top__slider-item">
                 <div class="container">
-                    <h2 class="top__slider-title">We Do Big Things With Big Ideas</h2>
-                    <p class="top__slider-text">Talk To Our Experts and Get Your Dream Home Done. If you dream of
-                        designing a new home that takes full advantage of the unique geography and
-                        views of land that you love</p>
+                    <h2 class="top__slider-title">Advancing Green Buildings</h2>
+                    <p class="top__slider-text">Buildx is the number one green builder for 11 years according to
+                        Engineering News-Record.</p>
                     <a href="#" class="top__btn-link">Explore Now</a>
                 </div>
                 <img src="img/slider-img-3.jpg" alt="" class="top__slider-image">
@@ -174,12 +173,15 @@
     </div>
 
     <div class="portfolio">
-        <div class="portfolio__content content">
-            <h3 class="portfolio__title title">FEATURED WORKS</h3>
-            <p class="portfolio__text text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit nisi
-                blanditiis
-                dolor excepturi ratione amet tenetur praesentium ducimus nam expedita, aliquid, cupiditate iste dolores
-                aliquam quisquam minus fugiat deserunt culpa!</p>
+        <div class="container">
+            <div class="portfolio__content content">
+                <h3 class="portfolio__title title">FEATURED WORKS</h3>
+                <p class="portfolio__text text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit nisi
+                    blanditiis
+                    dolor excepturi ratione amet tenetur praesentium ducimus nam expedita, aliquid, cupiditate iste
+                    dolores
+                    aliquam quisquam minus fugiat deserunt culpa!</p>
+            </div>
         </div>
         <div class="tabs">
             <div class="tabs__menu">Menu</div>
