--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 <input id="phone" name="phone" type="tel" placeholder="Eg. +447500000000" required="">
                             </li>
                             <li>
-                                <label for="textarea">Comment</label><br>
+                                <label for="textarea">Comment:</label><br>
                                 <textarea id="textarea"
                                     placeholder="Try to resize me to see how popup CSS-based resizing works."></textarea>
                             </li>
