--- a/index.html
+++ b/index.html
@@ -97,21 +97,23 @@
                         <ol>
                             <li>
                                 <label for="name">Name:</label>
+                                <br>
                                 <input id="name" name="name" type="text" placeholder="Name" required="">
                             </li>
                             <li>
                                 <label for="email">Email:</label>
+                                <br>
                                 <input id="email" name="email" type="email" placeholder="example@domain.com"
                                     required="">
                             </li>
                             <li>
                                 <label for="phone">Phone:</label>
+                                <br>
                                 <input id="phone" name="phone" type="tel" placeholder="Eg. +447500000000" required="">
                             </li>
                             <li>
                                 <label for="textarea">Comment:</label><br>
-                                <textarea id="textarea"
-                                    placeholder="Try to resize me to see how popup CSS-based resizing works."></textarea>
+                                <textarea id="textarea" placeholder="Add your comment"></textarea>
                             </li>
                             <li>
                                 <button class="callback__btn" type="submit">Send</button>
@@ -465,7 +467,8 @@
                     <div class="news__courses-content">
                         <div class="news__courses-title">How to plan for your
                             dream house?</div>
-                        <div class="news__courses-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        <div class="news__courses-text">Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit.
                             Modi suscipit aperiam commodi, dolor doloremque cumque totam nulla sequi nisi!</div>
                         <a href="#" class="news__courses-link">READ MORE</a>
                     </div>
