--- a/index.html
+++ b/index.html
@@ -534,8 +534,8 @@
                         <a href="#" data-name="fa-phone" class="icon">
                             <i class="far fa-phone fa-rotate-90 "></i>
                         </a>
-                        <a href="tel:3333 222 1111" class="footer__list-link">P: 3333 222 1111</a> <br>
-                        <a href="tel:3333 222 1111" class="footer__list-link">F: 3333 222 1111</a>
+                        <a href="tel:33332221111" class="footer__list-link">P: 3333 222 1111</a> <br>
+                        <a href="tel:33332221111" class="footer__list-link">F: 3333 222 1111</a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#" data-name="fa-map-marker-alt" class="icon">
@@ -545,7 +545,7 @@
                             United States - GA 22222 </a>
                     </li>
 
-                    <nav class="footer__icons">
+                    <li class="footer__icons">
                         <a href="#" data-name="fa-facebook" class="icon">
                             <i class="fab fa-facebook"></i>
                         </a>
@@ -555,7 +555,7 @@
                         <a href="#" data-name="fa-vk" class="icon">
                             <i class="fab fa-vk"></i>
                         </a>
-                    </nav>
+                    </li>
 
                 </ul>
             </div>
